[project]
name = "aws-strands-server"
version = "0.1.0"
description = "Strands integration server for AG-UI using OpenAI models"
authors = [{ name = "AG-UI Contributors" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ag-ui-protocol>=0.1.5",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "strands-agents[OpenAI]>=1.15.0",
    "strands-agents-tools>=0.2.14",
    "ag_ui_strands~=0.1.0",
    "py-clob-client>=0.18.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "exa-py>=1.14.0",
    "ddtrace>=4.4.0",
    "anthropic>=0.83.0",
]
